Successfully added the camera functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,8 @@
     <string name="play_crunches">Play Crunches</string>
     <string name="play_squats">Play Squats</string>
     <string name="play_lunges">Play Lunges</string>
+    <string name="home">HOME</string>
+    <string name="camera">CAMERA</string>
+    <string name="takePicture">Take Picture</string>
+    <string name="todo">todo</string>
 </resources>
